CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(zeno 
	VERSION 0.1
	LANGUAGES CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)

# Currently always making static libraries
SET(BUILD_SHARED_LIBS Off)

IF (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ELSE (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")
ENDIF()

# TODO: Handle all 4 build types
IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_BUILD_TYPE Debug)
	#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/debug) # TODO: Dont set these, but use cmake install command to copy stuff
	#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/debug)
	#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/debug)

	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(CMAKE_BUILD_TYPE RelWithDebInfo )
	#SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin/release)
	#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin/release)
	#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin/release)
	
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ENDIF()

SET(LIBRARY_INSTALL_FOLDER "lib")

ADD_SUBDIRECTORY(extern)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(examples)

ENABLE_TESTING()

ADD_SUBDIRECTORY(test)