CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(zeno 
	VERSION 0.1
	LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)

# Currently always making static libraries
SET(BUILD_SHARED_LIBS Off)

IF (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ELSE (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")
ENDIF()

# TODO: Handle all 4 build types
IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_BUILD_TYPE Debug)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(CMAKE_BUILD_TYPE STREQUAL "Release" ||
	 CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo" ||
	 CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ENDIF()

SET(LIBRARY_INSTALL_FOLDER "lib")

ADD_SUBDIRECTORY(extern)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(examples)

ENABLE_TESTING()

ADD_SUBDIRECTORY(test)