CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(zeno 
	VERSION 0.1
	LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(ZENO_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
    set(ZENO_STANDALONE TRUE)
endif()

option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
option(ZENO_BUILD_EXAMPLES "Build the Zeno example programs" ${ZENO_STANDALONE})
option(ZENO_BUILD_TESTS "Build the Zeno test program" ${ZENO_STANDALONE})

list(APPEND CMAKE_MODULE_PATH "${ZENO_SOURCE_DIR}/CMake/modules")
# include(GNUInstallDirs) // TODO:

#ADD_COMPILE_DEFINITIONS(GLEW_STATIC=ON)

IF (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ELSE (BUILD_SHARED_LIBS)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")
ENDIF()

IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(CMAKE_BUILD_TYPE Debug)
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(CMAKE_BUILD_TYPE STREQUAL "Release" ||
	 CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo" ||
	 CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
	SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}")
ENDIF()

SET(LIBRARY_INSTALL_FOLDER "lib") #TODO: include(GNUInstallDirs) and/or CMAKE_INSTALL_LIBDIR

ADD_SUBDIRECTORY(extern)
ADD_SUBDIRECTORY(lib)

IF (${ZENO_BUILD_EXAMPLES})
	ADD_SUBDIRECTORY(examples)
ENDIF()

IF (${ZENO_BUILD_TESTS})
	ENABLE_TESTING()
	ADD_SUBDIRECTORY(test)
ENDIF()