SET(AppMain "ZenoMat4x4Printer")

ADD_EXECUTABLE(${AppMain} "main.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${LIB_NAME_CORE})
TARGET_INCLUDE_DIRECTORIES(${AppMain} PRIVATE ${LIBRARY_INCLUDE_PATH_CORE})