ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(window)

#export vars
SET(LIBRARY_INCLUDE_PATH_CORE ${LIBRARY_INCLUDE_PATH_CORE} PARENT_SCOPE)
SET(LIB_NAME_CORE ${LIB_NAME_CORE} PARENT_SCOPE)

SET(LIBRARY_INCLUDE_PATH_GRAPHICS ${LIBRARY_INCLUDE_PATH_GRAPHICS} PARENT_SCOPE)
SET(LIB_NAME_GRAPHICS ${LIB_NAME_GRAPHICS} PARENT_SCOPE)

SET(LIBRARY_INCLUDE_PATH_WINDOW ${LIBRARY_INCLUDE_PATH_WINDOW} PARENT_SCOPE)
SET(LIB_NAME_WINDOW ${LIB_NAME_WINDOW} PARENT_SCOPE)