SET(AppMain "GLFWApp")

MESSAGE(_libglew_static_ ${libglew_static})

ADD_EXECUTABLE(${AppMain} "main.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE glfw)
target_link_libraries(${AppMain} PRIVATE libglew_static)
#target_link_libraries(${AppMain} PRIVATE opengl)
#TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${LIB_NAME_CORE})
#TARGET_LINK_LIBRARIES(${AppMain} PRIVATE ${LIB_NAME_GRAPHICS})
#TARGET_INCLUDE_DIRECTORIES(${AppMain} PRIVATE ${LIBRARY_INCLUDE_PATH_CORE})
#TARGET_INCLUDE_DIRECTORIES(${AppMain} PRIVATE ${LIBRARY_INCLUDE_PATH_GRAPHICS})