SET(AppMain "GlfwApp")


ADD_EXECUTABLE(${AppMain} "main.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
if(UNIX AND NOT APPLE)
	TARGET_LINK_LIBRARIES(${AppMain} PRIVATE GL)
endif()
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glew)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-opengl)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glfw)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-core)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-window)
get_target_property(OUT ${AppMain} LINK_LIBRARIES)
message(STATUS ${OUT})