SET(AppMain "GlfwApp")


ADD_EXECUTABLE(${AppMain} "main.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glew)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-opengl)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glfw)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-window)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-core)