SET(AppMain "ZenoGraphics")

ADD_EXECUTABLE(${AppMain} "graphics.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glew)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-opengl)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glfw)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-game)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-graphics)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-window)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-core)

SET(AppMain "ZenoRenderTarget")

ADD_EXECUTABLE(${AppMain} "render_target.cpp")
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${AppMain} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glew)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-opengl)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-glfw)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-game)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-graphics)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-window)
TARGET_LINK_LIBRARIES(${AppMain} PRIVATE zeno-core)