SET(MODULE_NAME "Audio")
STRING(TOLOWER ${MODULE_NAME} MODULE_NAME_LOWER)
SET(LIB_NAME "zeno-${MODULE_NAME_LOWER}${LIBRARY_EXTENSION}")

set (LIBRARY_MODULE_PATH "${PROJECT_SOURCE_DIR}/lib/${MODULE_NAME_LOWER}")
set (LIBRARY_SRC_PATH "${LIBRARY_MODULE_PATH}/src" )
set (LIBRARY_INCLUDE_PATH "${LIBRARY_MODULE_PATH}/include")

file (GLOB_RECURSE LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/zeno/${MODULE_NAME}/*.hpp")
file (GLOB_RECURSE LIB_INLINE_FILES "${LIBRARY_INCLUDE_PATH}/zeno/${MODULE_NAME}/*.inl")
file (GLOB_RECURSE LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

SET(LIB_HEADER_FILES ${LIB_HEADER_FILES} ${LIB_INLINE_FILES})

add_library (${LIB_NAME} ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})
target_link_libraries(${LIB_NAME} PRIVATE zeno-openal)
target_link_libraries(${LIB_NAME} PRIVATE zeno-core)
target_include_directories(${LIB_NAME} PUBLIC ${LIBRARY_INCLUDE_PATH})

add_library("zeno-${MODULE_NAME_LOWER}" INTERFACE)
target_include_directories("zeno-${MODULE_NAME_LOWER}" INTERFACE ${LIBRARY_INCLUDE_PATH})
target_link_libraries("zeno-${MODULE_NAME_LOWER}" INTERFACE ${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION ${LIBRARY_INSTALL_FOLDER})

IF (${BUILD_SHARED_LIBS})
INSTALL(FILES $<TARGET_PDB_FILE:${LIB_NAME}> DESTINATION ${LIBRARY_INSTALL_FOLDER} OPTIONAL)
ENDIF()

INSTALL(FILES ${LIB_HEADER_FILES} DESTINATION "include/zeno/${MODULE_NAME}")
INSTALL(FILES "${LIBRARY_INCLUDE_PATH}/zeno/${MODULE_NAME}.hpp" DESTINATION "include/zeno")