SET(MODULE_NAME "game")
SET(LIB_NAME "zeno-${MODULE_NAME}${LIBRARY_EXTENSION}")

set (LIBRARY_MODULE_PATH "${PROJECT_SOURCE_DIR}/lib/${MODULE_NAME}")
set (LIBRARY_SRC_PATH "${LIBRARY_MODULE_PATH}/src" )
set (LIBRARY_INCLUDE_PATH "${LIBRARY_MODULE_PATH}/include")

file (GLOB_RECURSE LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/*.hpp")
file (GLOB_RECURSE LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

add_library (${LIB_NAME} ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})
target_include_directories(${LIB_NAME} PUBLIC ${LIBRARY_INCLUDE_PATH})
target_include_directories(${LIB_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/lib/core/include")
target_include_directories(${LIB_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/lib/graphics/include")
target_include_directories(${LIB_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/lib/window/include")
target_include_directories(${LIB_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/lib/utility/include")

add_library("zeno-${MODULE_NAME}" INTERFACE)
target_include_directories("zeno-${MODULE_NAME}" INTERFACE ${LIBRARY_INCLUDE_PATH})
target_link_libraries("zeno-${MODULE_NAME}" INTERFACE ${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION ${LIBRARY_INSTALL_FOLDER})

IF (${BUILD_SHARED_LIBS})
INSTALL(FILES $<TARGET_PDB_FILE:${LIB_NAME}> DESTINATION ${LIBRARY_INSTALL_FOLDER} OPTIONAL)
ENDIF()

INSTALL(FILES ${LIB_HEADER_FILES} DESTINATION "include/zeno/${MODULE_NAME}")
INSTALL(FILES "${LIBRARY_INCLUDE_PATH}/zeno/${MODULE_NAME}.hpp" DESTINATION "include/zeno")